// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Dropdown /> should allow to render menu inside another element 1`] = `
<div>
  <div
    id="menu-container"
  >
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should allow to use groups 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 1
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
            >
              Item 1
            </li>
            <li
              class="dropdown-item"
            >
              Item 2
            </li>
          </div>
        </div>
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 2
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
            >
              Item 3
            </li>
            <li
              class="dropdown-item"
            >
              Item 4
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 2`] = `
<div>
  <div
    class="junipero dropdown disabled"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 2`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: In dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Exit: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Already in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Exit: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;
